tweak to prevent close button overlap

--- a/django-verdant/rca/static/rca/css/desktop-small.less
+++ b/django-verdant/rca/static/rca/css/desktop-small.less
@@ -151,7 +151,7 @@ body.lightbox-view{
             z-index: 5001;
             background:white;
             border:1px solid @color-divider;
-            padding:28px 50px 28px 28px;
+            padding:28px 54px 28px 28px;
             display: block;
         }
 
